--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
 {% block extra_head %}
 <!-- Optimised dashboard assets -->
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+<link rel="stylesheet" href="{% static 'css/dashboard.css' %}?v=3">
 <link rel="stylesheet" href="{% static 'css/dashboard-scroll.css' %}">
 <script src="{% static 'js/clean-swipe.js' %}" defer></script>
 <script src="{% static 'js/color_picker.js' %}" defer></script>
