--- a/templates/planner/editEntry.html
+++ b/templates/planner/editEntry.html
@@ -26,8 +26,11 @@
             {% endif %}
 
             <div class="p-3 sm:p-8">
-                <form method="post" class="space-y-3 sm:space-y-8">
+                <form method="post" action="{% if next_url %}?next={{ next_url }}{% endif %}" class="space-y-3 sm:space-y-8">
                     {% csrf_token %}
+                    {% if next_url %}
+                        <input type="hidden" name="next" value="{{ next_url }}">
+                    {% endif %}
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-3 sm:gap-6">
                         <div>
