--- a/templates/components/tasks_section.html
+++ b/templates/components/tasks_section.html
@@ -53,8 +53,8 @@
                                 {% endif %}
                             </div>
                             
-                            <!-- All other fields in expanded view only -->
-                            <div class="hidden expanded-details">
+                            <!-- All task details - NOW ALWAYS VISIBLE -->
+                            <div class="expanded-details">
                                 <!-- All date/time fields first -->
                                 {% if task.start_time %}
                                     <div class="mb-2">
